--- a/mern-auth/src/App.css
+++ b/mern-auth/src/App.css
@@ -29,13 +29,26 @@ a {
   font-size: 18px;
   cursor: pointer;
 }
-
+.btn1 {
+	width: 52%;
+	padding: 10px;
+	margin: 10px;
+	background: #295b53;
+	color: #fff;
+	outline: none;
+	border: none;
+	border-radius: 8px;
+	font-size: 18px;
+	cursor: pointer;
+  }
+  
 .btn:hover {
   background: transparent;
   border: 2px solid#295b53;
   color: #f0f4f4;
 }
 
+  
 :root {
   --primary-color: #17a2b8;
   --dark-color: #343a40;
@@ -89,7 +102,8 @@ a {
   height: 15%;
   top: 0;
   opacity: 0.9;
-  background: #16312d;
+  background: #333636;
+  
 }
 
 .navbar .nav-links {
@@ -97,7 +111,10 @@ a {
   list-style: none;
   font-size: larger;
 }
-
+.img1{
+  width:40%;
+  height: 30%;
+}
 .navbar a {
   color: #fff;
   padding: 1rem;
@@ -111,8 +128,8 @@ a {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfG7oaT7g2SmoqKR40DzeKrs2aBTPHcJe_Pw&usqp=CAU")
-    no-repeat center 10% / cover;
+  background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStmdKZnvm6YHIOCFFMQSwJ7D5-qz461LqsSA&usqp=CAU")
+    no-repeat center 100% / cover;
   height: 100vh;
   /* background-color: #333; */
 }
